--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -59,7 +59,7 @@ $color-texto-anexo: #006DF0
 // Colores Curso ===================================
 //
 
-$color-curso-a: #522981
+$color-curso-a: #ECF4F8
 $color-curso-b: #37A3A5
 $color-curso-c: #FFCD0D
 $color-curso-d: #7DD3E9
